--- a/package.json
+++ b/package.json
@@ -9,19 +9,40 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "next": "15.3.1"
+    "@deepgram/sdk": "^3.12.1",
+    "@livekit/agents": "^0.7.4",
+    "@livekit/agents-plugin-deepgram": "^0.5.6",
+    "@livekit/agents-plugin-openai": "^0.9.1",
+    "@livekit/agents-plugin-silero": "^0.5.5",
+    "@prisma/client": "^6.6.0",
+    "cross-fetch": "^4.1.0",
+    "dotenv": "^16.5.0",
+    "framer-motion": "^11.18.0",
+    "next": "15.3.0",
+    "prisma": "^6.6.0",
+    "react": "^18.3.1",
+    "react-aspect-ratio": "^1.1.9",
+    "react-dom": "^18.3.1",
+    "sharp": "^0.33.5"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@eslint/eslintrc": "^3",
+    "@livekit/components-react": "^2.9.3",
+    "@livekit/components-styles": "^1.1.5",
+    "@tailwindcss/postcss": "^4.1.4",
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
+    "@types/react": "^18.3.1",
+    "@types/react-dom": "^18.3.1",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9",
     "eslint-config-next": "15.3.1",
-    "@eslint/eslintrc": "^3"
+    "livekit-client": "^2.11.3",
+    "livekit-server-sdk": "^2.12.0",
+    "next": "15.3.0",
+    "postcss": "^8.5.3",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "tailwindcss": "^3.4.17",
+    "typescript": "^5"
   }
 }
