--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "^18.3.1",
     "react-aspect-ratio": "^1.1.9",
     "react-dom": "^18.3.1",
+    "onnxruntime-node": "1.22.0",
     "sharp": "^0.33.5"
   },
   "devDependencies": {
