--- a/package.json
+++ b/package.json
@@ -38,5 +38,12 @@
     "react-dom": "^18.3.1",
     "tailwindcss": "^3.4.17",
     "typescript": "^5"
+  },
+  "resolutions": {
+    "onnxruntime-node": "0.0.0"
+  },
+  "overrides": {
+    "onnxruntime-node": "0.0.0"
   }
+
 }
